--- a/src/main/resources/templates/cs/faq/view.html
+++ b/src/main/resources/templates/cs/faq/view.html
@@ -23,9 +23,9 @@
         <li><a th:href="@{/cs/layout/faq/list?type1=쿠폰/이벤트}">쿠폰 / 이벤트</a></li>
         <li><a th:href="@{/cs/layout/faq/list?type1=주문/결제}" >주문 / 결제</a></li>
         <li><a th:href="@{/cs/layout/faq/list?type1=배송}">배송</a></li>
-        <li><a th:href="@{/cs/layout/faq/list?type1=취소/반품/교환}">취소 / 반품 / 교환</a></li>
+        <li><a th:href="@{/cs/layout/faq/list?type1=취소/반품/환불}">취소 / 반품 / 환불</a></li>
         <li><a th:href="@{/cs/layout/faq/list?type1=주문/결제}">여행 / 숙박 / 항공</a></li>
-        <li><a th:href="@{/cs/layout/faq/list?type1=안전거래}">안전거래</a></li>
+        <li><a th:href="@{/cs/layout/faq/list?type1=안전결제}">안전결제</a></li>
       </ul>
     </aside>
     <article class="faq_article_view">
@@ -48,7 +48,7 @@
           감사합니다.<br />
         </p>
       </div>
-      <a th:href="@{/cs/layout/faq/list}" class="btnList">목록</a>
+      <a th:href="@{|/cs/layout/faq/list?type1=${faq.type1}|}" class="btnList">목록</a>
       <script src="/js/cs/faq.js"></script>
     </article>
   </section>
