--- a/src/main/resources/templates/cs/qna/view.html
+++ b/src/main/resources/templates/cs/qna/view.html
@@ -71,30 +71,13 @@
               }
             }
           </script>
-
-          <!--          <div class="qna-answer" th:text="${inquiry.answer}">-->
             <!-- 여기에는 문의 내용이 동적으로 출력됨 -->
           </div>
         </div>
-
-        <!-- 추가적인 문의 사항들 -->
-<!--        <div class="qna-item">-->
-<!--          <button class="qna-question" onclick="toggleFaq(this)">[문의제목] 반품 접수는 어떻게 하나요?</button>-->
-<!--          <div class="qna-answer">-->
-<!--            <p>반품접수 방법은 고객센터에 문의하시거나 온라인에서 직접 반품 접수를 할 수 있습니다.</p>-->
-<!--          </div>-->
-<!--        </div>-->
-
-<!--        <div class="qna-item">-->
-<!--          <button class="qna-question" onclick="toggleFaq(this)">[문의제목] 배송 진행 상황은 어디서 조회하나요?</button>-->
-<!--          <div class="qna-answer">-->
-<!--            <p>배송 진행 상황은 주문내역 페이지에서 조회하실 수 있습니다.</p>-->
-<!--          </div>-->
-<!--        </div>-->
-
         <!-- 목록으로 돌아가는 버튼 -->
-        <a th:href="@{/cs/layout/qna/list}" class="btnList">목록</a>
-      </div>
+<!--        <a th:href="@{/cs/layout/qna/list}" class="btnList">목록</a>-->
+      <a th:href="@{/cs/layout/qna/list(type1=${inquiry.type1})}" class="btnList">목록</a>
+        </div>
     </article>
   </section>
 </div>
