--- a/src/main/resources/templates/admin/shop/list.html
+++ b/src/main/resources/templates/admin/shop/list.html
@@ -23,6 +23,7 @@
     <script th:src="@{/js/login/utils.js}"></script>
     <script th:src="@{/js/login/validationSeller.js}"></script>
     <script th:src="@{/js/shop/deleteShop.js}"></script>
+    <script type="text/javascript" th:src="@{/js/modal/modal.js}"></script>
 </th:block>
 
 <div class="content" layout:fragment="content">
