--- a/src/main/resources/templates/admin/coupon/list.html
+++ b/src/main/resources/templates/admin/coupon/list.html
@@ -20,6 +20,7 @@
 </th:block>
 <!-- index.html 고유 스크립트 추가 -->
 <th:block layout:fragment="script">
+  <script type="text/javascript" th:src="@{/js/modal/modal.js}"></script>
 </th:block>
 
 <div class="content" layout:fragment="content">
