--- a/src/main/resources/templates/myPage/home.html
+++ b/src/main/resources/templates/myPage/home.html
@@ -112,8 +112,10 @@
                         </table>
                     </article>
                     <article class="review">
+                        <div>
                         <h3>상품평</h3>
                         <a th:href="@{/myPage/review}" class="more">더보기 &gt;</a>
+                        </div>
                         <table border="0" class="widthtable">
                             <tr>
                                 <th>번호</th>
