--- a/src/main/resources/static/css/my/info.css
+++ b/src/main/resources/static/css/my/info.css
@@ -52,7 +52,7 @@
     /* 높이 지정 */
     background-color: #f2f2f2;
     /* 배경색 설정 */
-    padding: 10x 20px;
+    padding: 10px 20px;
     /* 좌우 여백 추가 */
 }
 
@@ -73,6 +73,7 @@
     /* 더 안쪽으로 밀어 넣기 */
     font-size: 25px;
     font-weight: bold;
+    margin-bottom: 33px;
 }
 
 
